Small CSS tweaks; centered setup row text properly and fixed alignment in rewards' text

--- a/Src/Setup/setup.css
+++ b/Src/Setup/setup.css
@@ -17,6 +17,8 @@ body {
 .tableview > .section > .row {
     height: max-content;
     
+    padding-left: 5px;
+
     display: grid;
     place-content: center;
 }
